--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # These individuals contributed to the hbnb project in this repository
 
 Dikachi-official <nwokontadikachi@gmail.com>
+Michael Hercjay <iamhercjay@gmail.com>
