0x02. AirBnB clone - MySQL

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # These individuals contributed to the hbnb project in this repository
 
-Dikachi-official <nwokontadikachi@gmail.com>
-Michael Hercjay <iamhercjay@gmail.com>
+<li>Dikachi-official <nwokontadikachi@gmail.com></li>
+<li>Michael Hercjay <iamhercjay@gmail.com></li>
